# kraken

./: .gitmodules  CMakeLists.txt  Makefile  Makefile_auto  README.md  configure  index.html  params.json
base/: CommandLineParser.h  SVector.h
sample/: dere_dyak_dmel.config  dmel.gtf
sample/genomes/: dere.fa  dmel.fa  dyak.fa
sample/syntenies/: dere_dmel.satsuma  dere_dyak.satsuma
src/: Alignment.cc  Alignment.h  AlignmentBlock.cc  AlignmentBlock.h  Blosum.h  CodonTranslate.cc  Coordinate.cc  CrossCorr.cc  CrossCorr.h  DNAVector.cc  DNAVector.h  MultXCorr.h
src/AnnotationQuery/: AnnotationQuery.cc  AnnotationQuery.h  NCList.h  TranscriptInfo.cc  compareAnnotWithRef.cc  getIOSingleExonTranscripts.cc  runAnnotationQuery.cc  runGTFCompare.cc  threeWayAnnotCompare.cc  twoWayAnnotCompare.cc
src/Cola/: AlignmentCola.cc  AlignmentCola.h  Cola.cc  Cola.h  EditGraph.cc  EditGraph.h  IAligner.h  NSGAaligner.cc  NSGAaligner.h  NSaligner.cc  NSaligner.h  SWGAaligner.cc  SWGAaligner.h
src/Kraken/: AssignKrakenIDs.cc  CleanKrakenFile.cc  GTFTransfer.cc  GTFTransfer.h  KrakenConfig.cc  KrakenConfig.h  KrakenEvaluator.cc  KrakenEvaluator.h  KrakenMap.cc  KrakenMap.h  KrakenXMFA.cc  KrakenXMFA.h  runKraken.cc
src/annotationQuery/: AnnotationQuery.cc  AnnotationQuery.h  CompareAnnotWithRef.cc  MAF2Satsuma.cc  MultiAlignParser.cc  MultiAlignParser.h  RunAnnotationQuery.cc  TranscriptInfo.cc
src/kraken/: AssignKrakenIDs.cc  CleanKrakenFile.cc  GTFTransfer.cc  GTFTransfer.h  KrakenConfig.cc  KrakenConfig.h  KrakenEvaluator.cc  KrakenMap.cc  KrakenMap.h  KrakenMultiAlign.cc  KrakenMultiAlign.h  KrakenParams.h  KrakenXMFA.h  RunKraken.cc  runKraken.cc
